<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout8"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:scaleType="fitCenter"
        android:src="@drawable/pointer" />

    <RelativeLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/login_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/pleaseLoginHere"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/blackBackground" />

        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_heading"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/textfield_login"
            android:ems="13"
            android:gravity="center"
            android:hint="USERNAME"
            android:text="ACT01315"
            android:inputType="textCapCharacters"
            android:maxLines="1"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textfield_login"
            android:ems="13"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:hint="PASSWORD"
            android:text="445566"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />


        <TextView
            android:id="@+id/tv_forgotPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_pass"
            android:layout_alignRight="@+id/login_pass"
            android:layout_below="@+id/login_pass"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:text="@string/forgotPassword"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blackBackground"
            android:textColorLink="@color/colorPrimaryDark"
             />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_pass"
            android:layout_alignRight="@+id/login_pass"
            android:layout_below="@+id/tv_forgotPwd"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/call"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textColorLink="@color/colorPrimaryDark"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="2"

            >


            <Button
                android:id="@+id/login_btn"
                android:fontFamily="@font/helvetica_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/login_pass"
                android:layout_alignLeft="@+id/login_pass"
                android:layout_alignRight="@+id/login_pass"
                android:layout_alignStart="@+id/login_pass"
                android:layout_below="@+id/tv_phone"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/blackBackground"
                android:ems="6"
                android:text="Login"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/login_registerme"
                android:fontFamily="@font/helvetica_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/login_pass"
                android:layout_alignLeft="@+id/login_pass"
                android:layout_alignRight="@+id/login_pass"
                android:layout_alignStart="@+id/login_pass"
                android:layout_below="@+id/login_btn"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/blackBackground"
                android:ems="6"
                android:text="Signup"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/link"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/thinkStupid"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/link"
        fontPath="fonts/Roboto-Light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/link"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textColorLink="@color/colorPrimaryDark"
        android:visibility="gone" />


</RelativeLayout>
